@@ -7,13 +7,11 @@ AUX ssp.c 3065 RMD160 4d1f9aeb0d7d63978b717b7487dfbf17b9fd046a SHA1 ce38c67dc73f
 DIST dietlibc-0.28.tar.bz2 560540 RMD160 242cbcd5b7e7f341713f587598cddc9d6ee39f59 SHA1 ac67fca8e57f495e9834dfc77f3e3df227488774 SHA256 2b5cba7bad7ef6a4c0e83303c78cbf426e1fe01a5a69aeae801d714d6fdc002c
 DIST dietlibc-0.30-patches-r0.tar.bz2 13466 RMD160 aef639595e93bd319744901aa87ae15d331709f2 SHA1 f71163605ea54cef6a336a2c360beec38234858e SHA256 bdc14a428b53dcd57bbce2337198e43473964624021d5a4918c5147753e75251
 DIST dietlibc-0.30.tar.bz2 567046 RMD160 98d4e20e106f60835ed4a22d3013d9a34957f18a SHA1 cab8631f8ca1902d6668584f72f71706bee020eb SHA256 2c8733825d364d374f0179a403a57e4a382fbb9852431228ef19062a5de183b5
-DIST dietlibc-0.32_pre20081116.tar.bz2 580327 RMD160 15f2376a440514439b370838e027c5b0f87f67f7 SHA1 58d0842f1b254e3042cedea42a2a3e054b64844a SHA256 2206136d8f075d93382f9ac6fd32f9af2929ca48b1abc2f7e6239a7f322171b8
 DIST dietlibc-0.33_pre20090721.tar.bz2 587935 RMD160 1122b52aad5042454a6c3d4d8a180e51384294ca SHA1 55f6c372c720ca88bcaa523f5e590b65243cebdc SHA256 761d9c84b335a60546beae53695979196d60d2569f42daa4d112e01c1df122df
 DIST dietlibc-patches-0.30-r2.tar.bz2 31582 RMD160 6cd2a89cb47131360ed6e6a8cbcbe79aad84b18a SHA1 9c0bb84a7449edbfaccf0cbe694ccf8f57e26566 SHA256 03a3ea9bba39fb78511a59e80bcbdafdc82a0859b31b6af925854052a79f06fe
 EBUILD dietlibc-0.28.ebuild 1574 RMD160 477bbf6ac0ac6a8c88ecec756f9ac7cd76aa381c SHA1 19e09f5fc6951ed45a1a057a337e7f73ef86e069 SHA256 3c7622b1aeef75690a38a0a7ea3e937043a3c6e6b0a04a3687c3ee64cb3c90f9
 EBUILD dietlibc-0.30-r2.ebuild 1495 RMD160 ff2129e72221ba0c48af10c1a7914d3d756357fa SHA1 d504b63210f2ecbf19c8110ad19c54b56f7d9b90 SHA256 590eeea02efef70d952a34af892e797366dc5c05c9a01547795180a51ea77c4e
 EBUILD dietlibc-0.30.ebuild 1313 RMD160 20799b3ac51920bc5b3f9fd8216ce3cd72d690d4 SHA1 4bf3749e2c24bb186fde24104dab8b21b5762b01 SHA256 dc11441e50be541b55358f24d8a4c092968938d0c546bc905cf39b5b8416866c
-EBUILD dietlibc-0.32_pre20081116.ebuild 1373 RMD160 a59892228e5203f5c8f0919946e609719598a312 SHA1 0f5c03ee340d6d371d003c81218c7dee95667fd8 SHA256 3c11dd89d65e18807f09d1d2f34cc48111c189dbf144694fc801217d1c8267eb
-EBUILD dietlibc-0.33_pre20090721.ebuild 1410 RMD160 3d29de90be6795d04609e304aa4a9f60ddc7e274 SHA1 9125f7da14e51e7216c69fa9c41bff35b8aac2e9 SHA256 307a45b72196338cdf8827717d003fdbfb888c9215268d1a83b99831fb2cccd3
-MISC ChangeLog 11624 RMD160 682bd95cab621f9c897e8b15fea0fea893b78aee SHA1 1bd3f5f019719df9001957c57dbebaaa414fe325 SHA256 c2777a7d0b100f53357f8838db20c9ca5254070c947c03c3721ee8b0486ee44a
+EBUILD dietlibc-0.33_pre20090721.ebuild 1417 RMD160 b4148a98e725f780ac06e05670c4f7d0e04da2ad SHA1 2be7705e49433193b3604102c6121832fd6df3e3 SHA256 5b920c946a015fb5e6b815061cc2e4b57bb20a197116d8d9430552511253ea85
+MISC ChangeLog 11768 RMD160 69c61ee5d942be1b4b9043b668db113299a89099 SHA1 d3e9bcd3ce2de8de865d403155ae278978d00d3c SHA256 f1b63eb5e2b54e2cb0389be6736ee43ac9454cecdd8e49c92e9cb755d8f36481
 MISC metadata.xml 410 RMD160 063e81d4d38be2fa6f093828b42a0ee3e5b2b582 SHA1 e73d09647dcac3413d7bccb6f1d2a0bc50e60f48 SHA256 3fc38345f9430d71c6369f84fc1b6248bc8aa0ec74cb4ae5b2797fe01cf48721
