@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/dietlibc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.79 2009/08/10 10:21:40 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.80 2009/08/24 15:42:30 hollow Exp $
+
+  24 Aug 2009; Benedikt Böhm <hollow@gentoo.org>
+  -dietlibc-0.32_pre20081116.ebuild, dietlibc-0.33_pre20090721.ebuild:
+  fix #111880 (again)
 
 *dietlibc-0.33_pre20090721 (10 Aug 2009)
 
